tests/error/type_errors/negative_nat_literal.py
from guppylang.decorator import guppy
from guppylang.std.num import nat


@guppy
def foo() -> nat:
    return -1


guppy.compile(foo)
