tests/error/type_errors/negative_nat_literal.err
Error: Type mismatch (at $FILE:7:11)
  | 
5 | @guppy
6 | def foo() -> nat:
7 |     return -1
  |            ^^ Expected return value of type `nat`, got `int`

Guppy compilation failed due to 1 previous error
